dumb tests work

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -14,5 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "fs-extra": "^10.0.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.4"
   }
 }
